network_policies/allow_traffic_to_pod_for_ip_range.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: backend
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynetworkpolicy
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.1.0/24
